fix spacing on chat last update

--- a/src/styles/SidebarChat.css
+++ b/src/styles/SidebarChat.css
@@ -1,12 +1,13 @@
 .sidebarChat {
   position: relative;
+  max-height: 100px;
 }
 
 .sidebarChat__container {
   display: flex;
   padding: 20px;
   cursor: pointer;
-  border-bottom: 1px solid #f6f6f6;
+  border-bottom: 1px solid #c9c9c9;
 }
 
 .sidebarChat > a {
@@ -39,5 +40,11 @@
 
 .sidebarChat__option > Button {
   min-width: unset;
-  color: rgb(68, 68, 68);
+  background-color: rgb(88, 88, 88);
+  color: rgb(223, 215, 215);
+}
+
+.sidebarChat__option > Button:hover {
+  background-color: rgb(133, 133, 133);
+  color: rgb(223, 215, 215);
 }
